# kernel-comment

./: README.md
linux/: .gitignore  get-kernel-header.sh  get-kernel-src.sh  kernel-header-understand.txt  kernel-header.txt  kernel-src.txt  kernel-src2-understand.txt  kernel-src2.txt
linux/block/: bio.c
linux/certs/: signing_key.pem  signing_key.x509
linux/drivers/staging/otus/: wwrap.c
linux/drivers/uio/: uio.c
linux/fs/: CMakeLists.txt  aio.c  bio.c  block_dev.c  buffer.c  char_dev.c  dcache.c  exec.c  file_table.c  filesystems.c  namei.c  namespace.c  open.c  read_write.c  super.c
linux/fs/fuse/: control.c  cuse.c  dev.c  dir.c  file.c  fuse_i.h  inode.c
linux/fs/nfs/: nfsroot.c
linux/fs/ramfs/: inode.c
linux/fs/romfs/: super.c
linux/fs/xfs/: xfs_file.c
linux/include/asm-generic/: bug.h
linux/include/asm-x86_64/: processor.h
linux/include/linux/: blk_types.h  blkdev.h  compiler.h  dcache.h  err.h  fdtable.h  file.h  fs.h  fs_struct.h  mnt_namespace.h  mount.h  namei.h  path.h  uio_driver.h
linux/kernel/: sys.c
linux/mm/: filemap.c  highmem.c  page_alloc.c
linux/net/ipv4/: ip_input.c  ip_options.c  tcp_input.c
